--- a/package.json
+++ b/package.json
@@ -13,6 +13,11 @@
     "mysql2": "^3.11.3"
   },
   "devDependencies": {
-    "nodemon": "^3.1.7"
+    "@eslint/js": "^9.11.1",
+    "eslint": "^9.11.1",
+    "globals": "^15.9.0",
+    "nodemon": "^3.1.7",
+    "prettier": "^3.3.3",
+    "typescript-eslint": "^8.7.0"
   }
 }
