--- a/package.json
+++ b/package.json
@@ -8,18 +8,19 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "nodemon src/index.js"
   },
-  
   "author": "",
   "license": "ISC",
   "dependencies": {
     "dotenv": "^16.4.5",
     "express": "^4.21.0",
-    "mysql2": "^3.11.3"
+    "mysql2": "^3.11.3",
+    "uuid": "^10.0.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.11.1",
     "@types/express": "^5.0.0",
     "@types/node": "^22.7.1",
+    "@types/uuid": "^10.0.0",
     "eslint": "^9.11.1",
     "globals": "^15.9.0",
     "nodemon": "^3.1.7",
