feat: add validations to POST route for user creation
- Added validation to check if 'name', 'email', and 'password' are provided.
- Implemented email format validation to ensure valid email addresses.
- Added password length validation to ensure a minimum of 6 characters.
- Return appropriate error messages and status codes (400 for bad input, 409 for duplicate entries).

--- a/package.json
+++ b/package.json
@@ -1,12 +1,11 @@
 {
   "name": "desafio_auth",
   "version": "1.0.0",
-  "type": "module",
   "description": "",
-  "main": "index.js",
+  "main": "dist/index.js",
+  "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon src/index.js"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "ISC",
