--- a/.env.exemple
+++ b/.env.exemple
@@ -3,3 +3,5 @@ DB_HOST=localhost
 DB_USER=root
 DB_PASSWORD=your_password_here
 DB_NAME=your_database_name_here
+DB_PORT=DBport_number
+PORT=express_portnuber
