--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "bcrypt": "^5.1.1",
     "dotenv": "^16.4.5",
     "express": "^4.21.0",
+    "jsonwebtoken": "^9.0.2",
     "mysql2": "^3.11.3",
     "uuid": "^10.0.0"
   },
@@ -23,6 +24,7 @@
     "@eslint/js": "^9.11.1",
     "@types/bcrypt": "^5.0.2",
     "@types/express": "^5.0.0",
+    "@types/jsonwebtoken": "^9.0.7",
     "@types/node": "^22.7.1",
     "@types/uuid": "^10.0.0",
     "eslint": "^9.11.1",
